# SlowDash

./: .gitignore  README.md  docker-compose.yml  example-config.yaml  example.env  requirements.txt  run.py  test.py
.github/: copilot-instructions.md
app/: __main__.py  app.py  callbacks.py  data.py  layouts.py  plots.py  run_tab.py  server.py  settings.py  tables.py  training_tab.py  user.py
dash_backend/: Dockerfile  README.md  pyproject.toml
dash_backend/dash_backend/backend/: __main__.py  api.py  config.py  models.py  session.py  strava.py
dash_backend/dash_backend/database/: config.py  crud.py  models.py  schemas.py
dash_backend/src/dash_backend/: __main__.py  config.py  models.py
dash_backend/src/dash_backend/api/: api.py  auth.py  middleware.py
dash_backend/src/dash_backend/content/: plots.py  stats.py
dash_backend/src/dash_backend/strava/: strava_client.py  strava_utils.py
dash_backend/src/dash_database/: config.py  crud.py  models.py  schemas.py  session.py
dash_frontend/: Dockerfile  LICENSE.md  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml
dash_frontend/public/mocks/: get-hero-stats  get-runs  get-summary-plots  login
dash_frontend/src/: config.ts  middleware.ts  paths.ts
dash_frontend/src/api/: api-call.ts  api_call.ts
dash_frontend/src/app/: layout.tsx  page.tsx
dash_frontend/src/app/auth/login-success/: LoginSuccessClient.tsx  page.tsx
dash_frontend/src/app/auth/sign-in/: page.tsx
dash_frontend/src/app/dashboard/: layout.tsx  page.tsx
dash_frontend/src/app/dashboard/runs/: page.tsx
dash_frontend/src/app/dashboard/settings/: page.tsx
dash_frontend/src/components/auth/: layout.tsx  sign-in-form.tsx
dash_frontend/src/components/core/theme-provider/: theme-provider.tsx
dash_frontend/src/components/dashboard/layout/: config.ts  side-nav.tsx
dash_frontend/src/components/dashboard/overview/: hero.tsx  run-plots.tsx
dash_frontend/src/components/dashboard/runs/: customers-filters.tsx  run-detail.tsx  runs-table.tsx
dash_frontend/src/components/dashboard/settings/: date-range-form.tsx
dash_frontend/src/contexts/: user-context.tsx
dash_frontend/src/lib/auth/: client.ts
dash_frontend/src/types/: overview.ts  plots.ts  run.ts  user.ts
dash_frontend/training_dash.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dash_frontend/training_dash/frontend/: __main__.py  callbacks.py  config.py  dashboard.py  layouts.py  plots.py  server.py
dash_frontend/training_dash/frontend/static/css/: style.css
dash_frontend/training_dash/frontend/templates/: login.html  settings.html
src/app/: layouts.py  server.py  user.py
src/database/: alembic.ini  models.py
src/database/alembic/: env.py
