[tool.poetry]
name = "dash-backend"
version = "0.1"
description = "A plotly dash app for looking at Strava running data over a training period."
authors = [
	"Jon Holdship <jonholdship@gmail.com>"
]
packages=[
	{include="dash_backend",from="."},
]
readme = "README.md"

[tool.poetry.dependencies]
python ="~3.9"
numpy = "1.21.5"
pandas = "2.0.2"
psycopg2-binary = "^2.9.9"
pydantic = {version="1.10.9",extras =["dotenv"]}
SQLAlchemy= "2.0.23"
stravalib = "1.5"
typesystem = "0.2.5"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

[tools.poetry.group.lint]
optional = true


[tools.poetry.group.lint.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"