[tool.poetry]
name = "slowdash-backend"
version = "0.1"
description = "A Fastapi backend for looking at Strava running data over a training period."
authors = [
	"Jon Holdship <jonholdship@gmail.com>"
]
packages=[
	{include="dash_backend",from="src"},
	{include="dash_database",from="src"},
]
readme = "README.md"

[tool.poetry.dependencies]
python ="~3.12"
numpy = "^1.21.5"
pandas = "2.2.3"
psycopg2-binary = "^2.9.9"
pydantic = ">=2.0"
SQLAlchemy= "2.0.23"
stravalib = "^2.3"
typesystem = "0.2.5"
fastapi = "^0.115.2"
uvicorn = "^0.27.0"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"