[tool.poetry]
name = "training-dash"
version = "0.1"
description = "A plotly dash app for looking at Strava running data over a training period."
authors = [
	"Jon Holdship <jonholdship@gmail.com>"
]
packages=[
	{include="training_dash",from="."}
]
readme = "README.md"

[tool.poetry.dependencies]
python ="~3.9"
dash= "2.10.0"
dash_bootstrap_components="1.4.1"
flask = "2.2.3"
numpy = "1.21.5"
pandas = "2.0.2"
plotly = "5.6.0"
psycopg2-binary = "^2.9.9"
pydantic = {version="1.10.9",extras =["dotenv"]}
stravalib = "1.5"
typesystem = "0.2.5"
orjson = "^3.9.12"

[tools.poetry.group.lint]
optional = true


[tools.poetry.group.lint.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"